# Computational-Vision---Divided-Training

./: .gitignore  .pre-commit-config.yaml  README.md  launch_master.sh  launch_worker.sh  launch_worker_1.sh  launch_worker_2.sh  launch_worker_3.sh  main.py  main_single.py  models_trained  pyproject.toml
models/: __init__.py  base_model.py  cnn.py  densenet121.py  densenet201.py  efficient_net.py  efficientnetb1.py  inceptionv3.py  nasnet.py  resnet.py  vgg.py  vgg16.py  vgg19.py  vgg_like.py
utils/: __init__.py  albumentations_augment.py  classification_reports.py  config.py  data_loader.py  distributed.py  generate_classification_report.py  generate_visualkeras_all.py  gpu_config.py  model_reports.py  sync_manager.py
